Randevular form ekrani eklendi

--- a/FabrikaOtomasyonApp/FabrikaOtomasyonApp.csproj
+++ b/FabrikaOtomasyonApp/FabrikaOtomasyonApp.csproj
@@ -71,6 +71,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>dbFabrikaDataSet4.xsd</DependentUpon>
     </Compile>
+    <Compile Include="dbFabrikaDataSet5.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dbFabrikaDataSet5.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="dbFabrikaDataSet6.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dbFabrikaDataSet6.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Evraklar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,12 +105,6 @@
     <Compile Include="Malzemeler.Designer.cs">
       <DependentUpon>Malzemeler.cs</DependentUpon>
     </Compile>
-    <Compile Include="MudurGiris.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MudurGiris.Designer.cs">
-      <DependentUpon>MudurGiris.cs</DependentUpon>
-    </Compile>
     <Compile Include="PersonelGiris.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +125,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Randevular.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Randevular.Designer.cs">
+      <DependentUpon>Randevular.cs</DependentUpon>
+    </Compile>
     <Compile Include="YoneticiGiris.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,9 +155,6 @@
     <EmbeddedResource Include="Malzemeler.resx">
       <DependentUpon>Malzemeler.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MudurGiris.resx">
-      <DependentUpon>MudurGiris.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="PersonelGiris.resx">
       <DependentUpon>PersonelGiris.cs</DependentUpon>
     </EmbeddedResource>
@@ -166,6 +173,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Randevular.resx">
+      <DependentUpon>Randevular.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="YoneticiGiris.resx">
       <DependentUpon>YoneticiGiris.cs</DependentUpon>
     </EmbeddedResource>
@@ -226,6 +236,28 @@
     </None>
     <None Include="dbFabrikaDataSet4.xss">
       <DependentUpon>dbFabrikaDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="dbFabrikaDataSet5.xsc">
+      <DependentUpon>dbFabrikaDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="dbFabrikaDataSet5.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dbFabrikaDataSet5.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="dbFabrikaDataSet5.xss">
+      <DependentUpon>dbFabrikaDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="dbFabrikaDataSet6.xsc">
+      <DependentUpon>dbFabrikaDataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="dbFabrikaDataSet6.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dbFabrikaDataSet6.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="dbFabrikaDataSet6.xss">
+      <DependentUpon>dbFabrikaDataSet6.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
